2006-07-12 19:42:39  Sean Middleditch <elanthis@awesomeplay.com>

  * Removed the StringArg type, it's not useful anymore.
  * Reverted phrase_match to using C-style strings, since the
    command parser is more efficient that way.
  * Added a prefix_match function, which is more efficient for
    one-word matches than phrase_match.

2006-07-12 16:07:05  Sean Middleditch <elanthis@awesomeplay.com>

  * Use streams in commands and help instead of just using Player*.
  * Automatically register socials as actual commands, instead of
    having the command lookup code treat socials specially.

2006-07-12 15:06:15  Sean Middleditch <elanthis@awesomeplay.com>

  * Added fdprintf(), which is something libc should freakin'
    provide.  Stupid libc.
  * Lots of updates to Streams.  These really need to be rewritten
    in terms of ostream and streambuf.
  * Added a new StringBuffer implementation, with new header
    common/strbuf.h.  This implemenation has a 512 buffer
    (allocated on the stack for stack copies of StringBuffer) and
    then allocates big buffers on the heap if needed.  Theoretically
    this will reduce allocations; adding some logging on overflow
    so I can figure out if it is happening too often.

2006-07-12 02:37:20  Sean Middleditch <elanthis@awesomeplay.com>

  * Landed the new String implementation, which uses just
    GC'd strings.  This means that, in most cases, we now have a
    zero-copying, zero-overhead string mechanism.  Unfortunately,
    there are a few places that still have copying, and a few places
    we had to add it.  Some of these will be cleaned up shortly,
    to make them more efficient.

2006-07-11 19:30:43  Sean Middleditch <elanthis@awesomeplay.com>

  * Began the (immense) initial work to use the new String class.
    This work requires that all static strings assigned to a
    string put in the form S("foo") instead of just "foo" so that
    the compiler can tell the difference between static strings