@@ -7,7 +7,7 @@ npc_blueprint {
   id = "rabbit"
   name = "a rabbit"
 
-  desc = "{.D} is small and covered in brown fur.  Its nose twitches occasionally as it searches for food."
+  desc = "{$1.D} is small and covered in brown fur.  Its nose twitches occasionally as it searches for food."
 
   ai = animal
   @ai_flee = 95
@@ -30,7 +30,7 @@ npc_blueprint {
   id = "fox"
   name = "a fox"
 
-  desc = "The red {.n} scurries about, looking for danger."
+  desc = "The red {$1.n} scurries about, looking for danger."
 
   ai = animal
   @ai_flee = 95
@@ -53,7 +53,7 @@ npc_blueprint {
   id = "wolf"
   name = "a wolf"
 
-  desc = "{.D} doesn't appear to be afraid of much."
+  desc = "{$1.D} doesn't appear to be afraid of much."
 
   ai = animal
   @ai_flee = 60
@@ -76,7 +76,7 @@ npc_blueprint {
   id = "wolf_large"
   name = "a large wolf"
 
-  desc = "{.D} is huge, larger than most other wolves by far.  Its gray fur is rough and coarse.  The wolf doesn't look friendly."
+  desc = "{$1.D} is huge, larger than most other wolves by far.  Its gray fur is rough and coarse.  The wolf doesn't look friendly."
 
   ai = animal
   @ai_flee = 60
@@ -100,7 +100,7 @@ npc_blueprint {
   name = "a dire wolf"
   alignment = -700
 
-  desc = "Demonic in appearnace, {.D} is larger than any wolf could be through natural means.  Its eyes glow red, and its near-black fur is broken in places, where spiked ridges run along its body.  {.D} has as sinister a nature as any animal could have."
+  desc = "Demonic in appearnace, {$1.D} is larger than any wolf could be through natural means.  Its eyes glow red, and its near-black fur is broken in places, where spiked ridges run along its body.  {$1.D} has as sinister a nature as any animal could have."
 
   ai = animal
   @ai_flee = 10
