@@ -1,2 +1,2 @@
-current = "0000/01/01 00.71"
+current = "0000/01/01 00.972"
 # vim: set shiftwidth=2 tabstop=2 expandtab:
