@@ -25,21 +25,21 @@ npc_blueprint {
   id = "rabbit_skeleton"
   parent = "base_undead"
   name = "a rabbit skeleton"
-  desc = "Bits of fur and sinew hang off the tiny bones of {.D}."
+  desc = "Bits of fur and sinew hang off the tiny bones of {$1.D}."
   @corpse_name = "rabbit skeleton"
 }
 npc_blueprint {
   id = "fox_skeleton"
   parent = "base_undead"
   name = "a fox skeleton"
-  desc = "{.D} shambles around with none of the grace of a living fox."
+  desc = "{$1.D} shambles around with none of the grace of a living fox."
   @corpse_name = "fox skeleton"
 }
 npc_blueprint {
   id = "wolf_skeleton"
   parent = "base_undead"
   name = "a wolf skeleton"
-  desc = "The eyes of {.d} glow a malevolent red."
+  desc = "The eyes of {$1.d} glow a malevolent red."
   @corpse_name = "wolf skeleton"
 }
 npc_blueprint {
