@@ -285,72 +285,6 @@ get_num_suffix (unsigned int num) {
 	return num == 1 ? S("st") : num == 2 ? S("nd") : num == 3 ? S("rd") : S("th");
 }
 
-uint
-str_value (String string)
-{
-	// empty?  none
-	if (string.empty())
-		return 0;
-
-	// first, check for #<number> notation or .<number> notation
-	if (string[0] == '#' || string[0] == '.') {
-		// empty, not valid
-		if (string[1] == '\0')
-			return 0;
-
-		char *end;
-		uint ret = strtoul (string.c_str() + 1, &end, 10);
-
-		// not a full valid number
-		if (end == NULL || *end != '\0')
-			return 0;
-
-		return ret;
-	}
-
-	// next, look for "other"
-	if (str_eq (string, S("other"))) {
-		return 2; // second item
-	}
-
-	// ok, scan for first, second, third, fourth... ninth
-	static String numerics[] = { S("first"), S("second"), S("third"),
-		S("fourth"), S("fifth"), S("sixth"), S("seventh"), S("eighth"),
-		S("ninth")};
-	int ret;
-	for (ret = 0; ret < 9; ++ret)
-		if (phrase_match(numerics[ret], string))
-			break;
-	if (ret < 9) {
-		return ret + 1; /* first is position 0,
-				   but is item 1 - add 1 */
-	}
-
-	// try the number with th, st, nd, and rd on the end
-	if (string.size() >= 3) {
-		// parse
-		char* end;
-		int value = strtol(string.c_str(), &end, 10);
-
-		// invalid?  end
-		if (value <= 0)
-			return 0;
-
-		// check that rest of string is 1st, 2nd, 3rd, or Xth
-		if (!strcmp(end - 1, "1st"))
-			return value;
-		else if (!strcmp(end - 1, "2nd"))
-			return value;
-		else if (!strcmp(end - 1, "3rd"))
-			return value;
-		else if (!strcmp(end, "th"))
-			return value;
-	}
-
-	// no matches - no a number
-	return 0;
-}
-
 StringList&
 explode (StringList& list, String str, char ch)
 {
